Added loading gif for when the page takes a bit ^.^

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<meta name="theme-color" content="#a29cd9" />
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -113,7 +113,7 @@ $(document).ready(function(){
      
 	$("#search").on("click", function() {
 	// $("#dogs").empty();  no content for dog yet
-
+$("#loading-image").show();
 var images={};
 var corsAnywhere = 'https://cors-anywhere.herokuapp.com/';
 fetch( corsAnywhere + 'http://shibe.online/api/shibes?count=6&urls=true&httpsUrls=true')
@@ -309,5 +309,20 @@ images=data;
 		</div>
 	<button style="margin-top: 25px;" id="search2" class="btn btn-primary btn-xl">Search</button>
 	</div>
+	
+	<div class= "content" id= "loading-image">
+	<img src= "cat.gif" height= "200"> 
+	</div> 
  </body>
+ 
+ <!-- Loading Image-->
+ <script>
+$(document).ajaxStart(function() {
+  $("#loading-image").show();
+});
+
+$(document).ajaxStop(function() {
+  $("#loading-image").hide();
+});
+</script>
 </html>
