New Commit for Loading

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 			display: none;
 		}
 	body {
-		background-color: ffff7f;
+		background-image: url("background2.png");
+		background-size: contain;
 		margin: 0px;
 		padding-bottom: 70px;
 	 }
